--- a/style.css
+++ b/style.css
@@ -6,28 +6,44 @@ body {
     left: 0px;
 
     border: 5px solid black;
+    margin-top: 20px;
     width: 100%;
     height: 50vh;
     
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-    margin-top: 20px;
+
 }
 
 .note {
     background: #fffbe6;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 10px;
     width: 200px;
-    box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+
+    display: flex;
+    flex-direction: column;
+
 }
 
 .text-zone {
 
     width: 100%;
+    height: 100%;
     border: none;
+    background: none;
+    resize: none;
+    outline: none;
+}
+
+.list-item-input {
+
+    width: 80%;
+    border: 1px solid black;
     background: none;
     resize: none;
     outline: none;
