Restrict draggable notes within board boundaries
Updated the drag logic in script.js to prevent notes from being moved outside the board area. Added 'position: relative' and 'overflow: hidden' to the #board in style.css to ensure notes are visually contained within the board.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
 
 #board {
     left: 0px;
+    position: relative;
+    overflow: hidden;
 
     border: 5px solid black;
     margin-top: 20px;
