Fixed the delete button for items
Had to make a separate class for delete buttons within card items because the css was bugged

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@
     padding: 0;
 }
 
-.note-list .deleteButton {
+.itemDeleteButton {
     border: none;
     background: #ff4d4d;
     color: white;
