Added resize and color wheel
yeah and some bug fixes

next: fixe the mode swap and rewrite the drag logic

--- a/style.css
+++ b/style.css
@@ -234,3 +234,10 @@ button:hover {
 .resize-handle:hover {
      background: rgba(0, 0, 0, 0.4);
 }
+#color-picker-input {
+width: 45px;
+height: 30px;
+border: none;
+padding: 0;
+cursor: pointer;
+}
